[tool.poetry]
name = "mymath-use"
version = "0.1.0"
description = ""
authors = ["curt <curt.k@kakaomobility.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mymath = { url = "https://github.com/curtkim/mymath/releases/download/v0.1.0/mymath-0.1.0.tar.gz" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
