[tool.poetry]
name = "pygame-first"
version = "0.1.0"
description = ""
authors = ["curt.k <curt.k@kakaocorp.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PyOpenGL = "^3.1.4"
pygame = "^1.9.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
